Compiler_Project/rsc/tests/typecheck/invalid/printint_float.ml
print_int(1000+100)
